Paginas de registro y olvide password creadas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>APV - administrador de pacientes veterinarios</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="min-h-screen bg-gray-50"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
